<resources>
    <string name="app_name">Palindrome</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="check_required">Please input text first.</string>
    <string name="name_required">Name is required</string>
    <string name="email">Email</string>
    <string name="back_button">Back Button</string>
    <string name="user_list">User List</string>
    <string name="hello">Hello</string>
    <string name="kumaa">Kumaa</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="select_user">Select a User</string>
    <string name="ispalindrome">%s is a Palindrome</string>
    <string name="not_palindrome">%s is not a Palindrome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="empty_data">Data is Empty</string>
    <string name="no_data">No Data</string>
    <string name="user_list_not_found_error">User not found</string>
</resources>