<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="@dimen/spacing_8"
        android:paddingStart="@dimen/spacing_24">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back_button"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:text="@string/home"
            android:layout_marginStart="@dimen/spacing_16"
            app:layout_constraintStart_toEndOf="@+id/iv_back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greeting_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginHorizontal="@dimen/spacing_24">

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/text_size_12"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_greetings"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/spacing_8"
            android:fontFamily="@font/opensans_bold"
            android:textSize="@dimen/text_size_16"
            android:text="@string/kumaa" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_selected_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_select"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:gravity="center"
        android:fontFamily="@font/opensans_bold"
        android:textSize="@dimen/text_size_16"
        android:text="@string/selected_user_name" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_40"
        android:padding="@dimen/spacing_12"
        android:textColor="@color/white"
        android:text="@string/select_user"
        android:background="@drawable/bg_button_color"
        android:layout_marginBottom="@dimen/spacing_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>